# tui-map-generator

./: CHANGELOG.md  README.md  pyproject.toml  run.sh  tui-map-generator.code-workspace
.github/ISSUE_TEMPLATE/: bug_report.md
maps/: example_01.json  example_01.xp  example_02.json  example_02.xp  example_03.json  example_03.xp  height_map.json  height_map.xp  landscape_16_16_SSiS.txt  legend.xp
src/tui_map_generator/: __init__.py  __main__.py  diamond_square.py
tui_map_generator/: tui_map_generator.py
