[tool.poetry]
name = "tui-map-generator"
version = "0.1.6"
description = "Height map generator using diamond square with TUI interface"
authors = ["Hubert Nafalski <HubertReX@users.noreply.github.com>"]
license = "GPL-3.0-only"
homepage = "https://github.com/HubertReX/tui-map-generator"
repository = "https://github.com/HubertReX/tui-map-generator"
readme = "README.md"
packages = [{ include = "tui_map_generator", from = "src" }]
include = [
    { path = "src/tui_map_generator/maps/legend.xp", format = ["sdist", "wheel"] }
]

[tool.poetry.scripts]
tui-map-generator = "tui_map_generator:__main__"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
rich = "^13.6.0"
trogon = "^0.5.0"
rich-pixels = "^2.1.1"
pyrexpaint = "^0.0.2"
numpy = "^1.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
